--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@react-google-maps/api": "^2.20.6",
+    "framer-motion": "^12.10.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
